--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -42,11 +42,11 @@ jobs:
         run: |
           /usr/bin/codesign --force -s "WakaTime" --options runtime "build/Release/WakaTime.app/Contents/Library/LoginItems/WakaTime Helper.app" -v
           /usr/bin/codesign --verify --deep --strict --verbose=2 "build/Release/WakaTime.app/Contents/Library/LoginItems/WakaTime Helper.app"
-      #-
-      #  name: Codesign libswift_Concurrency.dylib
-      #  run: |
-      #    /usr/bin/codesign --force -s "WakaTime" --options runtime "build/Release/WakaTime.app/Contents/Frameworks/libswift_Concurrency.dylib" -v
-      #    /usr/bin/codesign --verify --deep --strict --verbose=2 "build/Release/WakaTime.app/Contents/Frameworks/libswift_Concurrency.dylib"
+      -
+        name: Codesign libswift_Concurrency.dylib
+        run: |
+          /usr/bin/codesign --force -s "WakaTime" --options runtime "build/Release/WakaTime.app/Contents/Frameworks/libswift_Concurrency.dylib" -v
+          /usr/bin/codesign --verify --deep --strict --verbose=2 "build/Release/WakaTime.app/Contents/Frameworks/libswift_Concurrency.dylib"
       -
         name: Codesign WakaTime.app
         run: |
@@ -75,10 +75,10 @@ jobs:
         name: Notarize WakaTime.app
         run: |
           ditto -c -k --keepParent build/Release/WakaTime.app main.zip
-          #UUID=$(xcrun notarytool submit main.zip --keychain-profile "notarytool-profile" --wait | grep -m 1 -o '[0-9a-f]\{8\}-[0-9a-f]\{4\}-[0-9a-f]\{4\}-[0-9a-f]\{4\}-[0-9a-f]\{12\}')
+          UUID=$(xcrun notarytool submit main.zip --keychain-profile "notarytool-profile" --wait | grep -m 1 -o '[0-9a-f]\{8\}-[0-9a-f]\{4\}-[0-9a-f]\{4\}-[0-9a-f]\{4\}-[0-9a-f]\{12\}')
           #xcrun notarytool history --keychain-profile "notarytool-profile"
           #xcrun notarytool log $UUID --keychain-profile "notarytool-profile"
-          xcrun notarytool log 8757991b-d7e8-4dda-9fb5-350c50173646 --keychain-profile "notarytool-profile"
+          #xcrun notarytool log 8757991b-d7e8-4dda-9fb5-350c50173646 --keychain-profile "notarytool-profile"
       -
         name: Staple WakaTime.app
         run: |
