--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -224,13 +224,12 @@ jobs:
         env:
           SPARKLE_PRIVATE_KEY: ${{ secrets.SPARKLE_PRIVATE_KEY }}
         run: |
-          echo "$SPARKLE_PRIVATE_KEY" > sparkle_private_key
-          ./bin/sparkle/generate_appcast \
-              --ed-key-file ./sparkle_private_key \
-              --link https://github.com/${{ github.repository_owner }}/${{ github.event.repository.name }}/releases \
-              --download-url-prefix https://github.com/${{ github.repository_owner }}/${{ github.event.repository.name }}/releases/download/${{ needs.version.outputs.semver_tag }}/ \
-              -o release/appcast.xml \
-              release/
+          echo "$SPARKLE_PRIVATE_KEY" | ./bin/sparkle/generate_appcast \
+            --ed-key-file - \
+            --link https://github.com/${{ github.repository_owner }}/${{ github.event.repository.name }}/releases \
+            --download-url-prefix https://github.com/${{ github.repository_owner }}/${{ github.event.repository.name }}/releases/download/${{ needs.version.outputs.semver_tag }}/ \
+            -o release/appcast.xml \
+            release/
       -
         name: "Create release"
         uses: softprops/action-gh-release@master
