Watch filesystem events noop

--- a/project.yml
+++ b/project.yml
@@ -8,6 +8,9 @@ packages:
   Sparkle:
     url: https://github.com/sparkle-project/Sparkle
     from: 2.0.0
+  EonilFSEvents:
+    url: https://github.com/eonil/FSEvents
+    from: 0.1.7
 
 targets:
   WakaTime:
@@ -31,6 +34,7 @@ targets:
     dependencies:
       - target: WakaTime Helper
       - package: Sparkle
+      - package: EonilFSEvents
     postBuildScripts:
       - script: |
           LOGIN_ITEMS_DIR="$BUILT_PRODUCTS_DIR/$PRODUCT_NAME.app/Contents/Library/LoginItems"
