--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -102,7 +102,8 @@ jobs:
         run: |
           xcodebuild -scheme WakaTime -configuration Release
           app=`find . -name WakaTime.app`
-          directory=`dirname $app`
+          echo "$app"
+          directory=`dirname "$app"`
           echo "directory=$directory" >> $GITHUB_OUTPUT
       -
         name: Import Code-Signing Certificates
